<resources>
    <string name="app_name">Calculador de Resistencia</string>
    <string name="title">Calculador de Resistencia</string>
    <string name="banda1_textview">Banda 1</string>
    <string name="banda2_textview">Banda 2</string>
    <string name="banda3_textview">Banda 3</string>
    <string name="banda4_textview">Banda 4</string>
    <string name="calc_button">Calcular</string>
    <string name="mostrar_button">Mostrar colores</string>
    <string name="imagen">Imagen resistencia</string>
    <string name="resistencia_inferior">resistencia inferior</string>
    <string name="resistencia_superior">Resistencia superior</string>
    <string name="respuesta">Resistencia de: %s Ohmns con una tolerancia del %s</string>

    <string-array name="banda1">
        <item>Seleccionar</item>
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Purpura</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>


    <string-array name="banda2">
        <item>Seleccionar</item>
        <item>Negro</item>
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Purpura</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>


    <string-array name="banda3">
        <item>Seleccionar</item>
        <item>Negro</item>
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Dorado</item>
        <item>Plateado</item>
    </string-array>

    <string-array name="banda4">
        <item>Seleccionar</item>
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Dorado</item>
        <item>Plateado</item>
    </string-array>



</resources>